--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   </div>
 
   <!-- background music (public domain / free track host) -->
-  <audio id="bgm" loop preload="auto" src="https://archive.org/download/love-song-2020-02-17/love-song.mp3
+  <audio id="bgm" loop preload="auto" src="/love.mp3
 
 "></audio>
 
