--- a/index.html
+++ b/index.html
@@ -254,9 +254,8 @@
   </div>
 
   <!-- background music (public domain / free track host) -->
-  <audio id="bgm" loop preload="auto" src="/love.mp3
+  <audio id="bgm" loop preload="auto" src="public/love.mp3"></audio>
 
-"></audio>
 
   <script>
     /*******************************
