--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   </div>
 
   <!-- background music (public domain / free track host) -->
-  <audio id="bgm" loop preload="auto" src="/public/love.mp3"></audio>
+  <audio id="bgm" loop preload="auto" src="public/love.mp3"></audio>
 
 
   <script>
