--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     
     <!-- Message -->
     <div class="text" style="font-size:clamp(18px,4.5vw,30px); line-height:1.6; color:#d81b60; text-align:center;">
-      Sa lahat ng Panahon, at sa kahit na anong Pagkakaton, <br>
+      Sa lahat ng Panahon, at sa kahit na anong Sitwasyon, <br>
       Ikaw at ikaw lamang palagi, babi. 
     </div>
     
